# ssi

./: .gitignore  Cargo.toml  LICENSE  MANIFEST.yml  README.md
.github/workflows/: build.yml  codecov.yml  test.yml
src/: baid64.rs  bip340.rs  ed25519.rs  encrypt.rs  identity.rs  lib.rs  main.rs  public.rs  runtime.rs  secret.rs
