[package]
name = "s2id"
version = "0.1.0"
edition = "2021"

[lib]
name = "ssi"

[[bin]]
name = "ssi"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
amplify = "4.6.0"
baid58 = "0.4.4"
secp256k1 = { version = "0.29.0", features = ["rand", "global-context"] }
rand = "0.8.5"
clap = { version = "4.5.4", features = ["derive"], optional = true }
crossbeam-channel = { version = "0.5.12", optional = true }

[features]
default = ["cli"]
cli = ["clap", "crossbeam-channel"]
