[package]
name = "s2id"
version = "0.1.0"
edition = "2021"

[lib]
name = "ssi"

[[bin]]
name = "ssi"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
amplify = "4.6.0"
secp256k1 = { version = "0.29.0", features = ["rand", "global-context"] }
rand = "0.8.5"
clap = { version = "4.5.4", features = ["derive"], optional = true }
shellexpand = { version = "3.1.0", optional = true }
sha2 = "0.10.8"
rpassword = { version = "7.3.1", optional = true }
aes = { version = "0.8.4", optional = true }
crossbeam-channel = { version = "0.5.12", optional = true }

mnemonic = "1.0.1"
base64 = "0.22.0"

[features]
default = ["cli"]
cli = ["clap", "crossbeam-channel", "shellexpand", "rpassword", "aes"]
