[package]
name = "s2id"
version = "0.3.0-alpha.1"
description = "Self-sovereign identity library and command-lie"
keywords = ["did", "ssi", "identity", "pgp", "gpg"]
categories = ["encoding", "value-formatting", "command-line-utilities"]
readme = "README.md"
authors = ["Dr. Maxim Orlovsky <orlovsky@lnp-bp.org>"]
homepage = "https://github.com/LNP-BP/ssi"
repository = "https://github.com/LNP-BP/ssi"
edition = "2021"
rust-version = "1.70.0"
license = "Apache-2.0"

[lib]
name = "ssi"

[[bin]]
name = "ssi"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
amplify = "4.6.0"
strict_encoding = "2.7.0-beta.4"
ascii-armor = "0.7.1"
baid64 = "0.2.2"
base64 = "0.22.1"
secp256k1 = { version = "0.29.0", features = ["rand", "global-context", "rand-std"] }
ec25519 = "0.1.0"
rand = "0.8.5"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"], optional = true }
shellexpand = { version = "3.1.0", optional = true }
sha2 = "0.10.8"
fluent-uri = "0.1.4"
percent-encoding = "2.3.1"
# Cli-specific
rpassword = { version = "7.3.1", optional = true }
aes-gcm = { version = "0.10.3", optional = true }
crossbeam-channel = { version = "0.5.12", optional = true }

[features]
default = ["cli"]
cli = ["clap", "crossbeam-channel", "shellexpand", "rpassword", "aes"]
aes = ["aes-gcm"]
